--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ build:
   skip: True  # [py2k]
 
 requirements:
-  build:
+  host:
     - python
     - setuptools
     # Project imports itself to find out version during build
