--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "asyncpgsa" %}
-{% set version = "0.18.1" %}
+{% set version = "0.19.2" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "a04f9b102dbdaf1fce26e70b958b2d5cf299bde5d25aa8295eb6a4006010545b" %}
+{% set hash_value = "40e6c9c1fa8a556b7b83826d382489a451ac54ed20e902f7294cbfbf44459c56" %}
 
 package:
   name: {{ name|lower }}
@@ -23,19 +23,20 @@ requirements:
     - setuptools
     # Project imports itself to find out version during build
     # time which results into importing runtime dependencies
-    - asyncpg >=0.12.0,<0.13
+    - asyncpg >=0.14.0,<0.15
     - sqlalchemy
   run:
     - python
-    - asyncpg >=0.12.0,<0.13
+    - asyncpg >=0.14.0,<0.15
     - sqlalchemy
 
 test:
   imports:
     - asyncpgsa
+    - asyncpgsa.testing
 
 about:
-  home: https://github.com/CanopyTax/asyncpgsa
+  home: https://github.com/canopytax/asyncpgsa
   license: Apache 2.0
   license_family: Apache
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
